myvoice/static/css/myvoice.css
/* Account for fixed navbar */
body {
  min-width: 595px;
  padding-top: 70px;
  padding-bottom: 30px;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 12px;
  color: #808184;
}

p {
	padding-left:15px;
	padding-right:15px;
}

h1 {
	font-size: 20px;
}

h2 {
	font-size: 14px;
}

/* Don't let the lead text change font-size. */
.lead {
  font-size: 13px;
}

/* Finesse the page header spacing */
.page-header {
  margin-bottom: 30px;
}
.page-header .lead {
  margin-bottom: 10px;
}

.print-break {
  page-break-after: always;
}

.print-only {
  display: none;
}

.web-only {
  display: block;
}

.section-heading.print_only {
  padding: 0px;
}

.section-heading.print_only img {
  width: 100%; 
  height: 30px; 
  padding:0px;
}

.section-heading.print_only h2 {
  left: 15px;
  padding: 0px;
  position: absolute; 
  top: 7px; 
}

.styled-select select, option {
   background: transparent;
   width: 268px;
   padding: 2px;
   padding-right: 40px;
   font-size: 15px;
   line-height: 1.2;
   border: 0;
   border-bottom: 1px solid #fff;
   border-radius: 0;
   height: 30px;
   
   -webkit-appearance: none;
   background: url(/static/img/grey_upsidedown_arrow.png) no-repeat right #fff;
}

/* Non-responsive overrides
 *
 * Utilitze the following CSS to disable the responsive-ness of the container,
 * grid system, and navbar.
 */

/* Reset the container */
.container {
  width: 595px;
  max-width: none !important;
}

.main-header {
	margin-top:9px;
	margin-bottom:26px;
}

.top-space {
	margin-top:9px;
}

.no-padding-left {
	padding-left: 0;
}

.no-padding-right {
	padding-right:0;
}

.participation-module {
	padding-top: 31px;
	color: #929497;
	font-size: 8px;
}

.participation-module .date {
	font-size:14px;
	text-align: right;
}

.participation-module .content {
	background-color: #E5E5E5;
	padding: 0 16px 20px 16px;
	height:101px;
}

.participation-module .content h1 {
	margin-top: 0;
	margin-bottom: 0;
	font-weight: 700;
	color:#8AC43F;
}

.participation-module .content h2 {
	padding-top:8px;
	margin-top:4px;
	font-weight: 700;
}

.participation-module .col-xs-4 {
	padding-left:3px;
	padding-right:0;
}

.section-heading {
	background-color: #A6A8AB;
	color:#fff;
	padding-top:10px;
	padding-bottom:10px;
	margin-bottom:10px;
}

.section-heading h2 {
	margin:0;
}

.container .navbar-header,
.container .navbar-collapse {
  margin-right: 0;
  margin-left: 0;
}

.navbar {
	font-size: 11px;
	text-transform: lowercase;
	color:#fff;
	background-color: #8AC43F;
	padding-top: 13px;
}

/* Always float the navbar header */
.navbar-header {
  float: left;
  height:54px;
}

.print-action {
	margin-left:48px;
}

.print-action img {padding-right:4px;}

/* Undo the collapsing navbar */
.navbar-collapse {
  display: block !important;
  height: auto !important;
  padding-bottom: 0;
  overflow: visible !important;
}

.navbar-toggle {
  display: none;
}
.navbar-collapse {
  border-top: 0;
}

.navbar-brand {
  margin-left: -15px;
  padding: 3px 15px 15px 22px;
}

/* Always apply the floated nav */
.navbar-nav {
  float: left;
  margin: 0;
}
.navbar-nav > li {
  float: left;
}
.navbar-nav > li > a {
  margin-right: 20px;
  padding: 10px 0 0;
  color: #fff;
}

.navbar-nav > li > a:hover {
  border-bottom: 1px solid #fff;
  background: none;
}

/* Redeclare since we override the float above */
.navbar-nav.navbar-right {
  float: right;
}

.dropdown-menu {
  background-color: #8ac43f;
  padding-top:20px;
  box-shadow: none;
  border: none;
  text-transform: none;
  border-radius: 0;
}

.dropdown-menu > li > a {
  color:#fff;
  font-size: 9px;
}

.dropdown:hover .dropdown-menu {
    display: block;
 }

 canvas#weekChart {
  margin-top:20px;
 }

 .chart-container {
  padding:0;
  margin-bottom: 20px;
 }

 .report-percent {
  font-size: .6em;
  font-weight: 300;
  overflow: hidden;
  white-space: nowrap;
 }

.week-text { 
  float:left;
  padding-left: 15px;
  width:70px;
}

 .green-box {
  width:auto;
  background-color: #8ac43f;
  border-radius: 50%;
  color:#fff;
  display: inline;
  text-align: center;
  float: left;
  font-size: 9px;
  padding: 5px;
  margin-right: 5px;
 }

 .green-box-label {
  font-size: 9px;
  display: inline;
 }

  .green-question-dot {
    border-radius: 50%;
    width:12px;
    background-color: #8ac43f;
    color:#fff;
    height: 12px;
    text-align: center;
    font-size:8px;
    font-weight: 700;
    padding-top: 1px;
    margin-bottom:2px;
 }

.popover {
    background-clip: padding-box;
    background-color: #fff;
    border:none;
    border-radius: 0;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    max-width: 150px;
    padding: 1px;
    position: absolute;
    text-align: left;
    white-space: normal;
    z-index: 1060;
    margin-left: 61px;
}

.popover.bottom {
    margin-top: 38px;
}

.popover.bottom > .arrow {
    border:none;
    border-top-width: 0;
    left: 50%;
    margin-left: -61px;
    top: -11px;
}

 .popover-content {
    font-size: 12px;
}


/* Undo custom dropdowns */
.navbar .navbar-nav .open .dropdown-menu {
  position: absolute;
  float: left;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, .15);
  border-width: 0 1px 1px;
  border-radius: 0 0 4px 4px;
  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
          box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
}
.navbar-default .navbar-nav .open .dropdown-menu > li > a {
  color: #333;
}
.navbar .navbar-nav .open .dropdown-menu > li > a:hover,
.navbar .navbar-nav .open .dropdown-menu > li > a:focus,
.navbar .navbar-nav .open .dropdown-menu > .active > a,
.navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
.navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
  color: #fff !important;
  background-color: #428bca !important;
}
.navbar .navbar-nav .open .dropdown-menu > .disabled > a,
.navbar .navbar-nav .open .dropdown-menu > .disabled > a:hover,
.navbar .navbar-nav .open .dropdown-menu > .disabled > a:focus {
  color: #999 !important;
  background-color: transparent !important;
}

#comments-table td {
	padding-top:15px;
	padding-bottom:15px;
}

.comment_text {
  width: 100%;
}

.special-th {
	background-color: #E5E6E7;
	color:#6D6E71;
	font-size: 9px;
}

.special-table-row {
	background-color: #A6A8AB !important;
	color:#fff;
	font-size: 9px;
	padding-top:3px !important;
	padding-bottom:3px !important;
}

.no-bottom-border {border-bottom-width:0px !important;}

th {
	font-size: 9px;
	font-weight: 400;
}

td {
	font-size: 12px;
}

.form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
  margin-top:50px;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
}
.form-signin .checkbox {
  font-weight: normal;
}
.form-signin .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input[name="username"] {
  margin-bottom: 20px;
  border-radius: 0;
}
.form-signin input[name="password"] {
  margin-bottom: 10px;
  border-radius: 0;
}

.btn-primary {
    background-color: #8AC43F;
    border:none;
    color: #fff;
    border-radius: 0;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
    background-color: #72A72E;
    border:none;
    color: #fff;
}


/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 178px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 178px;
  background-color: #E5E5E5;
}

.footer .navbar {
	background-color: #E5E5E5;
}

.footer  .navbar-nav li a {color: #808184;}
.footer  .navbar-nav li a:hover {color: #808184;}

